--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -65,7 +65,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #858796;
+  /*color: #858796;*/
   text-align: left;
   background-color: #fff;
 }
@@ -220,7 +220,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #858796;
+  /*color: #858796;*/
   text-align: left;
   caption-side: bottom;
 }
@@ -1669,7 +1669,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #858796;
+  /*color: #858796;*/
 }
 
 .table th,
