--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -10573,7 +10573,7 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #FFFFFF;
   width: 100%;
   overflow-x: hidden;
 }
